--- a/modules/home/desktop/hyprland/config
+++ b/modules/home/desktop/hyprland/config
@@ -1,7 +1,5 @@
-    monitor {
-        eDP-1,1920x1080@60,1920x0,1
-    }
-    
+ MONITORS
+
     general {
       sensitivity=1
       #main_mod=MOD4
@@ -82,4 +80,64 @@
     bind=SUPERSHIFT,left,movewindow,l
     bind=SUPERSHIFT,right,movewindow,r
     bind=SUPERSHIFT,up,movewindow,u
-    bind=SUPERSHIFT,down,m
+    bind=SUPERSHIFT,down,movewindow,d
+
+    bind=SUPER,1,workspace,1
+    bind=SUPER,2,workspace,2
+    bind=SUPER,3,workspace,3
+    bind=SUPER,4,workspace,4
+    bind=SUPER,5,workspace,5
+    bind=SUPER,6,workspace,6
+    bind=SUPER,7,workspace,7
+    bind=SUPER,8,workspace,8
+    bind=SUPER,9,workspace,9
+    bind=SUPER,0,workspace,10
+    bind=SUPER,right,workspace,+1
+    bind=SUPER,left,workspace,-1
+
+    bind=SUPERSHIFT,1,movetoworkspace,1
+    bind=SUPERSHIFT,2,movetoworkspace,2
+    bind=SUPERSHIFT,3,movetoworkspace,3
+    bind=SUPERSHIFT,4,movetoworkspace,4
+    bind=SUPERSHIFT,5,movetoworkspace,5
+    bind=SUPERSHIFT,6,movetoworkspace,6
+    bind=SUPERSHIFT,7,movetoworkspace,7
+    bind=SUPERSHIFT,8,movetoworkspace,8
+    bind=SUPERSHIFT,9,movetoworkspace,9
+    bind=SUPERSHIFT,0,movetoworkspace,10
+    bind=SUPERSHIFT,right,movetoworkspace,+1
+    bind=SUPERSHIFT,left,movetoworkspace,-1
+
+    bind=CTRL,right,resizeactive,20 0
+    bind=CTRL,left,resizeactive,-20 0
+    bind=CTRL,up,resizeactive,0 -20
+    bind=CTRL,down,resizeactive,0 20
+
+    bind=,print,exec,${pkgs.grim}/bin/grim -g "$(${pkgs.slurp}/bin/slurp)" - | ${pkgs.swappy}/bin/swappy -f - -o ~/Pictures/$(date +%Hh_%Mm_%Ss_%d_%B_%Y).png && notify-send "Saved to ~/Pictures/$(date +%Hh_%Mm_%Ss_%d_%B_%Y).png"
+
+    bind=,XF86AudioLowerVolume,exec,${pkgs.pamixer}/bin/pamixer -d 10
+    bind=,XF86AudioRaiseVolume,exec,${pkgs.pamixer}/bin/pamixer -i 10
+    bind=,XF86AudioMute,exec,${pkgs.pamixer}/bin/pamixer -t
+    bind=,XF86AudioMicMute,exec,${pkgs.pamixer}/bin/pamixer --default-source -t
+    bind=,XF86MonBrightnessDown,exec,${pkgs.light}/bin/light -U 5
+    bind=,XF86MonBrightnessUP,exec,${pkgs.light}/bin/light -A 5
+
+    #Suspend when laptop is closed
+    bindl=,switch:[Lid Switch],exec, "systemctl suspend"
+
+
+    windowrule=float,^(Rofi)$
+    windowrule=float,title:^(Volume Control)$
+    windowrule=float,title:^(Picture-in-Picture)$
+    windowrule=pin,title:^(Picture-in-Picture)$
+    windowrule=move 75% 75% ,title:^(Picture-in-Picture)$
+    windowrule=size 24% 24% ,title:^(Picture-in-Picture)$
+
+    exec-once=dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
+    exec-once=${pkgs.swaybg}/bin/swaybg -m center -i $HOME/flake/modules/themes/wall.png
+    exec-once=${pkgs.waybar}/bin/waybar
+    #exec-once=${pkgs.blueman}/bin/blueman-applet
+    exec-once = foot --server &
+    exec-once = swayidle -w & disown
+    exec-once = swayidle -w timeout 300 'swaylock -fF' timeout 600 'hyprctl dispatch dpms' resume 'hyprctl dispatch dpms on' before-sleep 'swaylock -fF'
+    exec-once = hyprctl setcursor "Capitaine Cursors (Gruvbox)" 14
